--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@ function speak(text) {
   speechSynthesis.speak(utter);
 }
 </script>
-
+<!-- W index.html, tuż PRZED zamknięciem </body> -->
+<script src="./freeflow-assistant.js"></script>
+  
 </body>
   <audio id="ttsAudio" preload="auto"></audio>
   <script>
